force-app/main/default/objects/Trivia_Question__c/Trivia_Question__c.object-meta.xml
<CustomObject>
    <description>A single trivia question. Inert until Status = Published.</description>
    <label>Trivia Question</label>
    <nameField>
        <label>Trivia Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trivia Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>