force-app/main/default/objects/Trivia_Question__c/fields/Citation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Citation_Mode__c</fullName>
    <label>Citation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Official</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>