force-app/main/default/objects/Trivia_Question__c/fields/Correct_Answer_Mode__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer_Mode__c</fullName>
    <label>Correct Answer Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
            </value>
            <value>
                <fullName>AnyOf</fullName>
            </value>
            <value>
                <fullName>MultiRequired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>