force-app/main/default/objects/Trivia_Question__c/fields/Exam_Domain__c.field-meta.xml
<CustomField>
    <fullName>Exam_Domain__c</fullName>
    <label>Exam Domain</label>
    <type>Lookup</type>
    <referenceTo>Exam_Domain__c</referenceTo>
    <relationshipName>Questions</relationshipName>
    <relationshipLabel>Exam Domain</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>