force-app/main/default/objects/Trivia_Question__c/fields/Fact_Check_Passed__c.field-meta.xml
<CustomField>
    <fullName>Fact_Check_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>First of the two-step publish gate: reviewer affirms question/answer/citation accuracy.</description>
    <label>Fact Check Passed</label>
    <type>Checkbox</type>
</CustomField>