force-app/main/default/objects/Trivia_Question__c/fields/Fact_Checked_By__c.field-meta.xml
<CustomField>
    <fullName>Fact_Checked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fact Checked By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Trivia Questions Fact Checked</relationshipLabel>
    <relationshipName>Trivia_Questions_Fact_Checked</relationshipName>
    <type>Lookup</type>
</CustomField>