force-app/main/default/objects/Trivia_Question__c/fields/Fact_Checked_Date__c.field-meta.xml
<CustomField>
    <fullName>Fact_Checked_Date__c</fullName>
    <label>Fact Checked Date</label>
    <type>DateTime</type>
</CustomField>