force-app/main/default/objects/Trivia_Question__c/fields/Glossary_Terms__c.field-meta.xml
<CustomField>
    <fullName>Glossary_Terms__c</fullName>
    <description>JSON array of {term, definition} pairs so the test taker never has to bail on an unrecognized word.</description>
    <inlineHelpText>JSON array: [{&quot;term&quot;:&quot;OWD&quot;,&quot;definition&quot;:&quot;Organization-Wide Defaults...&quot;}]. Rendered as an inline mini-glossary on question cards.</inlineHelpText>
    <label>Glossary Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>