force-app/main/default/objects/Trivia_Question__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>