force-app/main/default/objects/Trivia_Question__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description
    >Semicolon-separated keywords powering per-user topic analytics, word clouds, and study graphs.</description>
    <inlineHelpText
    >Semicolon-separated short keywords (e.g. &quot;OWD;Role Hierarchy;Sharing Rules&quot;). Used for per-user analytics, word clouds, and knowledge graphs.</inlineHelpText>
    <label>Keywords</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>