force-app/main/default/objects/Trivia_Question__c/fields/Named_Entities__c.field-meta.xml
<CustomField>
    <fullName>Named_Entities__c</fullName>
    <description>JSON array of named entities mentioned in the question (e.g. [{&quot;type&quot;:&quot;Feature&quot;,&quot;value&quot;:&quot;Role Hierarchy&quot;}]). Feeds knowledge graph edges.</description>
    <inlineHelpText>JSON array: [{&quot;type&quot;:&quot;Feature|Object|Concept|Persona|Tool&quot;,&quot;value&quot;:&quot;...&quot;}]. Drives the question knowledge graph.</inlineHelpText>
    <label>Named Entities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>