force-app/main/default/objects/Trivia_Question__c/fields/Primary_Reference_URL__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reference_URL__c</fullName>
    <description>One canonical reference link surfaced on every question card so the test taker can dig deeper without leaving Slack.</description>
    <inlineHelpText>One canonical URL surfaced on every question card.</inlineHelpText>
    <label>Primary Reference URL</label>
    <type>Url</type>
</CustomField>