force-app/main/default/objects/Trivia_Question__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Trivia Questions Published</relationshipLabel>
    <relationshipName>Trivia_Questions_Published</relationshipName>
    <type>Lookup</type>
</CustomField>