force-app/main/default/objects/Trivia_Question__c/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <label>Quality Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>