force-app/main/default/objects/Trivia_Question__c/fields/Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank__c</fullName>
    <label>Question Bank</label>
    <type>Lookup</type>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipName>Questions</relationshipName>
    <relationshipLabel>Question Bank</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>