force-app/main/default/objects/Trivia_Question__c/fields/Scenario_Text__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Text__c</fullName>
    <label>Scenario Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>