force-app/main/default/objects/Trivia_Question__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description
    >Semicolon-separated badges displayed on question cards and rolled up per-user (e.g. &quot;data-security;sharing;classic-vs-lightning&quot;).</description>
    <inlineHelpText
    >Semicolon-separated tags shown as badges and tracked per user for analytics.</inlineHelpText>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>