force-app/main/default/objects/Trivia_Question__c/fields/Times_Asked__c.field-meta.xml
<CustomField>
    <fullName>Times_Asked__c</fullName>
    <label>Times Asked</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>