force-app/main/default/objects/Trivia_Question__c/fields/Times_Correct__c.field-meta.xml
<CustomField>
    <fullName>Times_Correct__c</fullName>
    <label>Times Correct</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>